[gd_scene load_steps=11 format=3 uid="uid://bliokfrma7tkd"]

[ext_resource type="Script" path="res://game_end.gd" id="1_0yqg4"]
[ext_resource type="Texture2D" uid="uid://bqxnqdfsimxhw" path="res://Assets/Background2.png" id="1_jdtu0"]
[ext_resource type="Texture2D" uid="uid://l30x3iuxehrq" path="res://Assets/gametileset1.png" id="2_ws037"]
[ext_resource type="Texture2D" uid="uid://b6fv86oy6ygpd" path="res://Assets/gametileset2.png" id="2_x27w2"]
[ext_resource type="Texture2D" uid="uid://b1t50tsdp6fie" path="res://Player/NewMainCharacter/Dead/Dead5.png" id="4_hshad"]
[ext_resource type="FontFile" uid="uid://dsl5awgy80aev" path="res://NightsideDemoRegular.ttf" id="6_uydi6"]
[ext_resource type="AudioStream" uid="uid://dvlacad8r88lc" path="res://ClickSound.wav" id="7_uydi6"]
[ext_resource type="AudioStream" uid="uid://da1xylwf1t47g" path="res://OpenMusic.wav" id="8_clm12"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_uydi6"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_0yqg4"]

[node name="Node2D" type="Node2D"]
script = ExtResource("1_0yqg4")

[node name="Camera2D" type="Camera2D" parent="."]

[node name="Background4" type="Sprite2D" parent="Camera2D"]
position = Vector2(459, 91)
texture = ExtResource("1_jdtu0")

[node name="Background2" type="Sprite2D" parent="Camera2D"]
position = Vector2(-453, -331)
texture = ExtResource("1_jdtu0")

[node name="Background3" type="Sprite2D" parent="Camera2D"]
position = Vector2(551, -329)
texture = ExtResource("1_jdtu0")

[node name="Background5" type="Sprite2D" parent="Camera2D"]
position = Vector2(-541, 82)
texture = ExtResource("1_jdtu0")

[node name="Background6" type="Sprite2D" parent="Camera2D"]
position = Vector2(-508, 497)
texture = ExtResource("1_jdtu0")

[node name="Background7" type="Sprite2D" parent="Camera2D"]
position = Vector2(497, 504)
texture = ExtResource("1_jdtu0")

[node name="ColorRect" type="ColorRect" parent="Camera2D"]
offset_left = -1035.0
offset_top = -552.0
offset_right = 988.0
offset_bottom = 642.0
color = Color(0, 0.152941, 0.164706, 0.623529)

[node name="ColumnL" type="Sprite2D" parent="Camera2D/ColorRect"]
position = Vector2(231, 658)
scale = Vector2(7.75, 10.5404)
texture = ExtResource("2_ws037")

[node name="ColumnR" type="Sprite2D" parent="Camera2D/ColorRect"]
position = Vector2(1855, 702)
scale = Vector2(9.21875, 8.89323)
texture = ExtResource("2_ws037")

[node name="DeadPlayer" type="Sprite2D" parent="."]
position = Vector2(-3, 249)
scale = Vector2(5.80357, 9.61364)
texture = ExtResource("4_hshad")

[node name="Floor1" type="Sprite2D" parent="."]
position = Vector2(-441, 435)
scale = Vector2(10.7188, 9.79268)
texture = ExtResource("2_x27w2")

[node name="Floor2" type="Sprite2D" parent="."]
position = Vector2(233, 435)
scale = Vector2(10.7188, 9.79268)
texture = ExtResource("2_x27w2")

[node name="Floor3" type="Sprite2D" parent="."]
position = Vector2(903, 435)
scale = Vector2(10.7188, 9.79268)
texture = ExtResource("2_x27w2")

[node name="Floor4" type="Sprite2D" parent="."]
position = Vector2(-1120, 435.25)
scale = Vector2(10.7188, 9.79268)
texture = ExtResource("2_x27w2")

[node name="GameOver" type="Label" parent="."]
offset_left = -455.0
offset_top = -398.0
offset_right = 466.0
offset_bottom = -132.0
theme_override_fonts/font = ExtResource("6_uydi6")
theme_override_font_sizes/font_size = 200
text = "Game Over"

[node name="ReturnToSave" type="Button" parent="."]
offset_left = -253.0
offset_top = -89.0
offset_right = 265.0
offset_bottom = 26.0
theme_override_fonts/font = ExtResource("6_uydi6")
theme_override_font_sizes/font_size = 80
theme_override_styles/focus = SubResource("StyleBoxEmpty_uydi6")
text = "Return to save"
flat = true

[node name="QuitToMenu" type="Button" parent="."]
offset_left = -311.0
offset_top = 53.0
offset_right = 322.0
offset_bottom = 168.0
theme_override_fonts/font = ExtResource("6_uydi6")
theme_override_font_sizes/font_size = 80
theme_override_styles/focus = SubResource("StyleBoxEmpty_0yqg4")
text = "Quit to menu"
flat = true

[node name="ClickSound" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("7_uydi6")

[node name="GameLose" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("8_clm12")
autoplay = true

[connection signal="pressed" from="ReturnToSave" to="." method="_on_restart_pressed"]
[connection signal="pressed" from="QuitToMenu" to="." method="_on_quit_pressed"]
